force-app/main/default/objects/osf_Abacus_B2B_config__c/osf_Abacus_B2B_config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Abacus B2B config</label>
</CustomObject>