force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/AddonPayment_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>AddonPayment_Endpoint__c</fullName>
    <label>AddonPayment Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>