force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/AddonPayment_Merchant_Id__c.field-meta.xml
<CustomField>
    <fullName>AddonPayment_Merchant_Id__c</fullName>
    <label>AddonPayment Merchant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>