force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/AddonPayment_Shared_Secret__c.field-meta.xml
<CustomField>
    <fullName>AddonPayment_Shared_Secret__c</fullName>
    <label>AddonPayment Shared Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>