force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/ERP_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>ERP_Endpoint__c</fullName>
    <label>ERP Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>