force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>license code</description>
    <label>License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>