force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/order_resending_attempts__c.field-meta.xml
<CustomField>
    <fullName>order_resending_attempts__c</fullName>
    <label>Order resending attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>