force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/osf_balearic_island_shipping_cost__c.field-meta.xml
<CustomField>
    <fullName>osf_balearic_island_shipping_cost__c</fullName>
    <label>Balearic Island Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>