force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/osf_client_check_endpoint__c.field-meta.xml
<CustomField>
    <fullName>osf_client_check_endpoint__c</fullName>
    <label>ClientCheck_Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>