force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/osf_default_payment_condition__c.field-meta.xml
<CustomField>
    <fullName>osf_default_payment_condition__c</fullName>
    <label>Default Payment Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>