force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/osf_free_shipping_limit__c.field-meta.xml
<CustomField>
    <fullName>osf_free_shipping_limit__c</fullName>
    <description>Free Shipping Limit for Spain except Balearic Islands</description>
    <inlineHelpText>Free Shipping Limit for Spain except Balearic Islands</inlineHelpText>
    <label>Free Shipping Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>