force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/osf_order_type__c.field-meta.xml
<CustomField>
    <fullName>osf_order_type__c</fullName>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>