force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/osf_providertime_plus__c.field-meta.xml
<CustomField>
    <fullName>osf_providertime_plus__c</fullName>
    <label>ProviderTimePlus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>