force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/osf_shipping_cost__c.field-meta.xml
<CustomField>
    <fullName>osf_shipping_cost__c</fullName>
    <description>Shipping Cost in Spain except Balearic Islands</description>
    <inlineHelpText>Shipping Cost in Spain except Balearic Islands</inlineHelpText>
    <label>Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>