force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/osf_shipping_line_sku__c.field-meta.xml
<CustomField>
    <fullName>osf_shipping_line_sku__c</fullName>
    <label>Shipping Line SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>