force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/RealtimeStockCheck_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>RealtimeStockCheck_Endpoint__c</fullName>
    <label>RealtimeStockCheck_Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>