force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/Site_Key__c.field-meta.xml
<CustomField>
    <fullName>Site_Key__c</fullName>
    <label>Recaptcha Site Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>