force-app/main/default/objects/osf_Abacus_B2B_config__c/fields/Standard_delivery_time__c.field-meta.xml
<CustomField>
    <fullName>Standard_delivery_time__c</fullName>
    <label>Standard delivery time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>